--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Beauty Di's shaadi countdown</title>
+    <title>Sweety Di's shaadi countdown</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h2>Countdown to Beauty Di's Shaadi. </h2>
+    <h2>Countdown to Sweety Di's Shaadi. </h2>
     <div class="year">23.06.23</div>
     <div class="countdown">
       <div id="day">00</div>
